fix: overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,6 +131,11 @@
   font-family: var(--font-base);
 }
 
+html, body {
+  overflow-x: hidden;
+  overscroll-behavior: none;
+}
+
 body {
   font-family: var(--font-base);
   font-size: 15px;
@@ -141,7 +146,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
   position: relative;
 }
 
@@ -191,6 +195,8 @@ html {
   scroll-behavior: smooth;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overscroll-behavior: none;
 }
 
 html, body {
